--- a/docker/python/apache/fit4cybersecurity.conf
+++ b/docker/python/apache/fit4cybersecurity.conf
@@ -1,7 +1,7 @@
 WSGIPythonPath /csskp
 
 <VirtualHost *:80>
-        ServerAdmin info@nc3.lu
+        ServerAdmin juliayoone.jung@cgi.com, merouane.bouderbala@cgi.com
         ServerName fit4cybersecurity.docker
         DocumentRoot /csskp
 
